--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,5 +1,9 @@
 // Add your own custom styles here
 
+hr {
+  @apply border-neutral-500 dark:border-neutral-700 #{!important};
+}
+
 .social-icons {
   @apply -space-x-1;
   li {
@@ -25,6 +29,10 @@
 .custom-link:hover {
   color: #ffffff !important;
   font-weight: bold;
+}
+
+.badge {
+  @apply ml-1 mr-1 rounded-md border bg-neutral-100 dark:bg-neutral-900 px-1 py-[1px] text-xs font-normal border-gray-800 dark:border-gray-300 text-gray-800 dark:text-gray-300
 }
 
 @import "project-modal";
