--- a/layouts/partials/components/project-card.html
+++ b/layouts/partials/components/project-card.html
@@ -10,7 +10,7 @@
   {{/*  Clickeable title  */}}
   <div class="project-title">
     <h4> {{ .Title }} </h4>
-    {{ partial "engine-logo.html" (dict "Engine" .Params.engine ) }}
+    {{ partial "techs-logos.html" (dict "Techs" .Params.techs ) }}
   </div>
   
   {{/*  Summary  */}}
