--- a/layouts/partials/project-modal.html
+++ b/layouts/partials/project-modal.html
@@ -1,9 +1,6 @@
-{{/*  {{ $bodyClass:= .BodyClass }}  */}}
-
 
 <div class="modal" data-modal>
     <div class="modal-overlay" data-project-modal-close data-modal-overlay></div>
-  {{/*  <div class="modal-content {{ $bodyClass }}">  */}}
         <div class="modal-content">
 
             {{/*  Background image 
@@ -20,29 +17,33 @@
                 {{ if $background }}
                     <img class="project-background w-full h-full object-cover m-0 nozoom" src="{{ $background.RelPermalink }}" role="presentation">
                     <div
-                        class="project-background absolute inset-0 h-full bg-gradient-to-t from-neutral dark:from-neutral-900 to-transparent mix-blend-normal">
+                        class="project-background absolute inset-0 h-full bg-gradient-to-t mix-blend-normal from-white to-transparent dark:from-neutral-900">
                     </div>
                     <div
-                        class="project-background opacity-60 absolute inset-0 h-full bg-gradient-to-t from-neutral dark:from-neutral-900 to-neutral-100 dark:to-neutral-800 mix-blend-normal">
+                        class="project-background opacity-80 dark:opacity-60 absolute inset-0 h-full bg-gradient-to-t mix-blend-normal from-white to-white dark:from-neutral-900 dark:to-neutral-800 ">
                     </div>
                 {{ end }}
             </div>
 
             <h1 class="text-center"> {{ .Title }} </h1>
 
-            <div class="flex mt-2" style="justify-content: center; align-items: center;">
-                <span class="ml-1 mr-1 rounded-md border bg-gray-800 border-orange-400 px-1 py-[1px] text-xs font-normal dark:border-orange-600 text-orange-700 dark:text-orange-400">
-                  Unreal Engine 4
-                </span>
-                <span class="ml-1 mr-1 rounded-md border bg-gray-800 border-orange-400 px-1 py-[1px] text-xs font-normal dark:border-orange-600 text-orange-700 dark:text-orange-400">
-                    UI
-                </span>
-            </div>
-            {{/*  <div class="text-center mt-1">
-                {{ partial "engine-logo.html" (dict "Engine" .Params.engine "IconClass" "max-h-8 max-w-8" ) }}
-            </div>  */}}
+            {{/*  Get the techs titles to append them to the custom badges  */}}
+            {{ $data := partial "tools/load-json.html" "data/techs.json" }}
+            {{ $techsTitles := slice }}
+
+            {{ range .Params.techs }}
+                {{ $techData := index $data .}}
+                {{ $techsTitles = $techsTitles | append (index $techData "title") }}
+            {{end}}
+
+            {{/*  badges  */}}
+            {{ $badges := union $techsTitles .Params.badges}}
+            {{ partial "badge.html" $badges }}
+            
             <div class="content project-content">
-                {{ .Content }}
+                <body>
+                    {{ .Content }}
+                </body>
 
                 <hr class="project-hr">
                 {{ range .Params.list }}
