--- a/layouts/partials/badge.html
+++ b/layouts/partials/badge.html
@@ -1,4 +1,5 @@
-<div class="flex mt-2" style="justify-content: center; align-items: center;">
+{{/*  <div class="flex mt-2" style="justify-content: center; align-items: center;">  */}}
+<div class="flex -mt-1 mb-3" style="justify-content: left; align-items: center;">
     {{ range $item := . }}
     <span class="badge">
       {{ $item }}
