--- a/layouts/shortcodes/link.html
+++ b/layouts/shortcodes/link.html
@@ -2,4 +2,4 @@
 {{ $text := .Get "text" }}
 {{ $title := .Get "title" }}
 
-<a href="{{ $link }}" title="{{ $title }}" class="custom-link">{{ $text }}</a>
+<a href="{{ $link }}" title="{{ $title }}" class="custom-link" target="_blank" rel="noopener noreferrer">{{ $text }}</a>
