--- a/layouts/projects/list.html
+++ b/layouts/projects/list.html
@@ -11,6 +11,20 @@
     </div>
   </section>
 
+  {{/*  Example of how to run scripts from P5  */}}
+  {{/*  <!DOCTYPE html>
+  <html>
+    <head>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
+      <meta charset="utf-8" />
+      <link rel="stylesheet" type="text/css" href="assets/css/p5test.css" />
+    </head>
+    <body>
+      {{ $script:= resources.Get "js/p5scriptest.js" }}
+      <script defer src="{{ $script.RelPermalink }}"></script>
+    </body>
+  </html>  */}}
+  
   <section class="section">
     <div class="container">
       <div class="row gx-5">
