Added features to gallery and new links to ProjectCards
Now images gallery in ProjectModals support webm
Added the ability to define a link inside the project metadata to show Steam page links or Github Repository

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -36,7 +36,8 @@ hr {
 }
 
 .dev-prefix {
-  @apply text-base font-primary font-medium leading-relaxed text-text dark:text-darkmode-text;
+  justify-content: space-between;
+  @apply flex flex-row items-center justify-items-center text-base font-primary font-medium leading-relaxed text-text dark:text-darkmode-text;
 }
 
 @import "project-modal";
