--- a/layouts/projects/list.html
+++ b/layouts/projects/list.html
@@ -1,15 +1,24 @@
 {{ define "main" }}
 {{/*  {{ partial "page-header" . }}  */}}
 
+  {{ partialCached "profile.html" .}}
   {{/*  Hardcoded page header  */}}
-  <section>
+  {{/*  <section>
     <div class="container text-center">
       <div
         class="from-body to-theme-light dark:from-darkmode-body dark:to-darkmode-theme-light rounded-2xl bg-gradient-to-b px-8 py-14">
         <h1>Portfolio</h1>
       </div>
     </div>
-  </section>
+  </section>  */}}
+
+  <hr>
+      <div class=" my-5 text-center">
+        {{/*  <div
+          class="from-body to-theme-light dark:from-darkmode-body dark:to-darkmode-theme-light rounded-2xl bg-gradient-to-t px-8 py-4">  */}}
+          <h1>Portfolio</h1>
+        {{/*  </div>  */}}
+      </div>
 
   {{/*  Example of how to run scripts from P5  */}}
   {{/*  <!DOCTYPE html>
@@ -25,7 +34,7 @@
     </body>
   </html>  */}}
   
-  <section class="section">
+  <section class="container">
     <div class="container">
       <div class="row gx-5">
 
