--- a/layouts/partials/profile.html
+++ b/layouts/partials/profile.html
@@ -1,19 +1,23 @@
 <article class="mt-10 mb-10 w-full h-full flex flex-col items-center justify-center text-center">
     <div class="relative px-1 py-1 flex flex-col items-center justify-center text-center">
+      
       {{/*  Profile picture  */}}
       {{ with .Site.Author.image }}
         {{ partial "image" (dict "Src" . "Alt" "Size" "200x200" "Banner image" "Loading" "eager" "Class" "mb-2 rounded-full h-36 w-36" "DisplayXL" "800x" ) }}
       {{ end }}
+
       {{/*  Name  */}}
       <h1 class="mb-0 text-5xl font-extrabold text-neutral-800 dark:text-neutral-200">
           {{ .Site.Author.name | default .Site.Title }}
       </h1>
+
       {{/*  headline  */}}
       {{ with .Site.Author.headline }}
       <h2 class="mt-0 mb-0 text-2xl text-neutral-800 dark:text-neutral-300">
           {{ . | markdownify }}
       </h2>
       {{ end }}
+
       {{/*  Social links  */}}
       <div class="lg:mt-2">
         <ul class="social-icons">
@@ -30,6 +34,20 @@
             </li>
           {{ end }}
         </ul>
+      </div>
+
+      <div class="mt-5 flex flex-row items-center justify-items-center justify-around text-l">
+        <a
+          class="mr-2"
+          target="CV"
+          href="https://ugc.production.linktr.ee/6a09a337-7893-4ef8-8522-990deec11100_CV-Cabanas-Ligh-2024.pdf">
+            <i class="fa-solid fa-file-pdf text-xl"></i>
+        </a>
+        <a
+          target="CV"
+          href="https://ugc.production.linktr.ee/6a09a337-7893-4ef8-8522-990deec11100_CV-Cabanas-Ligh-2024.pdf">
+            <div>Curriculum Vitae</div>
+        </a>
       </div>
     </div>
   </article>
